Fixes spacing mobile

--- a/src/assets/css/search.css
+++ b/src/assets/css/search.css
@@ -2387,7 +2387,7 @@ a.tooltips-readingtime span {
 .item-content-btn, .item-content-btn2  {
   margin-bottom: 22px;
   text-align: center;
-  margin-top: 10px;
+  margin-top: 20px;
 }
 
 .modal-footer {
@@ -2552,7 +2552,7 @@ a.tooltips-readingtime span {
   }
 
   .item-content-btn {
-    margin-top: 10px;
+    margin-top: 20px;
   }
  
 }
